# mapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  justfile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  update-coverage-badge.yml
docs/contributing/: code-architecture.md  documentation.md  python-style.md  testing.md
docs/interface/: README.md  api.md  cli.md  quality-rules.md  query-reference.md  structured-properties.md
docs/technical/: README.md  ast-parser.md  badges.md  cli-commands.md  configuration.md  cypher-queries.md  graph_loader.md  neo4j-schema.md  status-checker.md  type-inference.md
docs/user-journeys/: 01-initial-setup.md  02-configuration-management.md  03-analyzing-codebase.md  04-storing-code-graph.md  07-checking-status.md  08-detecting-code-risks.md  09-querying-structured-metadata.md  10-quality-rules.md  README.md
src/m_apper/: __init__.py  api.py  cli.py  config.py  graph.py
src/mapper/: __init__.py  analyzer.py  api.py  config.py  graph.py  parser.py
src/mapper/analyser/: __init__.py  file_scanner.py  main.py  models.py
src/mapper/ast_parser/: __init__.py  extractor.py  models.py
src/mapper/cli/: __init__.py  _config_helpers.py  _quality_helpers.py  analyse.py  config.py  quality.py  queries.py  setup.py  status.py  version.py
src/mapper/config_manager/: __init__.py  credentials.py  manager.py  models.py
src/mapper/graph_loader/: __init__.py  loader.py
src/mapper/name_resolver/: __init__.py  models.py  resolver.py
src/mapper/quality/: __init__.py  config.py  executor.py  formatters.py  models.py  registry.py
src/mapper/query_system/: __init__.py  executor.py  formatters.py  group.py  query.py  registry.py
src/mapper/setup_orchestrator/: __init__.py  orchestrator.py
src/mapper/status_checker/: __init__.py  checker.py  models.py
src/mapper/type_inference/: __init__.py  inferrer.py  models.py  type_utils.py
tests/: __init__.py  test_parser.py
tests/cli/: test_cli.py  test_config.py  test_setup.py  test_status.py  test_version.py
tests/integration/: __init__.py  conftest.py  test_init_workflow.py
tests/integration/analyser/: __init__.py  test_cross_module.py  test_diagnostic.py  test_external_modules.py  test_graph_storage.py  test_import_tracking.py  test_inheritance.py  test_name_resolution.py  test_reload_workflow.py
tests/integration/query_system/: __init__.py  test_exported_api_dead_code.py  test_query_execution.py  test_structured_properties.py
tests/unit/: __init__.py  conftest.py
tests/unit/analyser/: __init__.py
tests/unit/ast_parser/: __init__.py  test_extractor.py  test_models.py
tests/unit/cli/: test_analyse.py  test_cli.py  test_config.py  test_quality.py  test_queries.py  test_setup.py  test_status.py
tests/unit/graph_loader/: __init__.py  test_loader.py
tests/unit/name_resolver/: __init__.py  test_resolver.py
tests/unit/parser/: test_parser.py
tests/unit/quality/: conftest.py  test_config.py  test_docstring_coverage_rule.py  test_executor.py  test_models.py  test_param_complexity_rule.py  test_quality_executor.py  test_quality_formatters.py  (+2 more)
(+48 files in other folders)
